Wrap order total values in <span>s, float labels left and values right on the cartpage, to avoid lines breaking with longer titles.

--- a/cartridge/shop/static/css/cartridge.css
+++ b/cartridge/shop/static/css/cartridge.css
@@ -38,6 +38,8 @@
 .btn-order-history {float:right; margin:-75px 20px 0 0;}
 .discount-form {float:right;}
 .discount-form .btn {float:right; margin:-5px 7px 0 0;}
+.form-cart .order-totals label {width: 87%; float: left; clear: both;}
+.form-cart .order-totals span {width: 10%; float: right; display: block;}
 
 /* Wishlist */
 .wishlist img {vertical-align:middle; margin-right:5px;}
